# Extensible-Storage-Engine

./: .gitignore  BUILDING.md  BuildESE.bat  CMakeLists.txt  CONTRIBUTING.md  README.md  SUPPORT.md
dev/ese/: BUILDING.md  CMakeLists.txt
dev/ese/published/: CMakeLists.txt
dev/ese/published/inc/: CMakeLists.txt  _jethdr.h  _jetmsg.h  cc.hxx  checksum.hxx  collection.hxx  dht.hxx  errdata.hxx  eseshadow.h  gendload.pl  iterquery.hxx  jet.h  jethdr.w  os.hxx  resmgr.hxx  stat.hxx  sync.hxx  tcconst.hxx
dev/ese/published/inc/bf/: _bfconst.hxx  bf.hxx  bfftl.hxx
dev/ese/published/inc/os/: EseEventTrace.g.hxx  EseEventTraceType.g.hxx  config.hxx  cprintf.hxx  edbg.hxx  encrypt.hxx  error.hxx  event.hxx  hapublish.hxx  library.hxx  math.hxx  memfile.hxx  memory.hxx  memorynotification.hxx  norm.hxx  osblockcache.hxx  osblockcacheconfig.hxx  osdiag.hxx  osdiskapi.hxx  oseventtrace.g.hxx  oseventtrace.hxx  osfileapi.hxx  osfs.hxx  osfsapi.hxx  osfsconfig.hxx  ostimerqueue.hxx  perfmon.hxx  string.hxx  sysinfo.hxx  task.hxx  thread.hxx  time.hxx  trace.hxx  types.hxx
dev/ese/src/: CMakeLists.txt
dev/ese/src/_errstr/: CMakeLists.txt  err.pl  errdata.cxx  errdata.txt  errorhierarchy.cxx
dev/ese/src/_esefile/: CMakeLists.txt  checksum.cxx  copyfile.cxx  esefile.hxx  status.cxx  xsum.cxx  xsum.hxx
dev/ese/src/_etw/: CMakeLists.txt  EseEtwEventsPregen.txt  Microsoft-ETW-ESE.mc  genetw.pl  gengenetw.pl  manifestresource.rc
dev/ese/src/_perfctrs/: CMakeLists.txt  perfdata.pl  perfdata.txt
dev/ese/src/_res/: CMakeLists.txt  fixmc.pl  gendtcoptics.pl  genhahack.pl  jetmsg.mc
dev/ese/src/_xpress/: CMakeLists.txt  XPRESS.chm  xdecode.c  xdecode.i  xencode.c  xencode.i  xpress.h  xprs.h
dev/ese/src/_xpress10/: xpress10corsica.cxx  xpress10sw.cxx
dev/ese/src/_xpress9/: Xpress9Amd64Insert.i  Xpress9DecHuffman.c  Xpress9DecLz77.c  Xpress9EncHuffman.c  Xpress9EncLz77.c  Xpress9Internal.h  Xpress9Lookup.i  Xpress9Lz77Dec.i  Xpress9Lz77EncInsert.i  Xpress9Lz77EncPass1.i  Xpress9Lz77EncPass2.i  Xpress9Misc.c  Xpress9ZobristTable.h  xpress9.h  xpress9lookup.i2  xpress9lookup.i3
dev/ese/src/checksum/: CMakeLists.txt  checksum.cxx  checksum_amd64.cxx  checksumstd.cxx  checksumstd.hxx
dev/ese/src/checksum/avx/: CMakeLists.txt  checksum_avx.cxx
dev/ese/src/checksum/main/: CMakeLists.txt
dev/ese/src/dht/: CMakeLists.txt  dht.cxx
dev/ese/src/embeddedunittest/: CMakeLists.txt  embeddedunittest.cxx  embeddedunittest.rc
dev/ese/src/ese/: CMakeLists.txt  PageSizeClean.hxx  _cat.cxx  backup.cxx  bf.cxx  bt.cxx  callback.cxx  cat.cxx  checksum_test.cxx  clogredomaps_test.cxx  comp.cxx  compression.cxx  cpage.cxx  cpage_test.cxx  cresmgr.cxx  dataserializer.cxx  db.cxx  dbbld.cxx  dbdump.cxx  dbscan.cxx  dbshrink.cxx  dbtask.cxx  dbutil.cxx  dir.cxx  ese.rc  esedump.cxx  esent.def  fcb.cxx  fcreate.cxx  fileopen.cxx  fldenum.cxx  fldext.cxx  fldmod.cxx  fldnorm.cxx  flushmap.cxx  flushmap_test.cxx  fmp.cxx  fmp_test.cxx  fucb.cxx  genapitable.pl  (+43 more)
dev/ese/src/ese/_log/: CMakeLists.txt  log.cxx  logdump.cxx  logread.cxx  logread_legacy.cxx  logredo.cxx  logredomap.cxx  logshadow.cxx  logstd.cxx  logstd.hxx  logstream.cxx  logutil.cxx  logwrite.cxx  rstmap.cxx
dev/ese/src/ese/_osu/: CMakeLists.txt  checksumu.cxx  configu.cxx  encryptu.cxx  eventu.cxx  fileu.cxx  hapublishu.cxx  normu.cxx  osu.cxx  osustd.cxx  osustd.hxx  syncu.cxx  timeu.cxx
dev/ese/src/ese/eselibwithtests/: CMakeLists.txt  OslayerIoMgrIoRunSuite.cxx  daehelpers_test.cxx
dev/ese/src/ese/server/: CMakeLists.txt
dev/ese/src/eseutil/: _dbspacedump.hxx  _edbutil.hxx  dbspacedump.cxx  eseutil.cxx  eseutil.rc
dev/ese/src/inc/: _bf.hxx  _bt.hxx  _comp.hxx  _cresmgr.hxx  _dump.hxx  _jet.hxx  _logread.hxx  _logredomap.hxx  _logstream.hxx  _logwrite.hxx  _space.hxx  _ver.hxx  bt.hxx  btsplit.hxx  callback.hxx  cat.hxx  ccsr.hxx  compression.hxx  cpage.hxx  cresmgr.hxx  daeconst.hxx  daedef.hxx  dataserializer.hxx  dbapi.hxx  dbscan.hxx  dbshrink.hxx  dbtask.hxx  dbutil.hxx  dir.hxx  esestd.hxx  fcb.hxx  file.hxx  fldenum.hxx  flushmap.hxx  fmp.hxx  fucb.hxx  idb.hxx  io.hxx  isamapi.hxx  jettest.hxx  (+30 more)
dev/ese/src/inc/_osu/: checksumu.hxx  configu.hxx  encryptu.hxx  eventu.hxx  fileu.hxx  normu.hxx  osu.hxx  syncu.hxx  timeu.hxx  typesu.hxx
dev/ese/src/noncore/eseshadow/: eseshadow.cxx  esewriter.cxx  esewriter.hxx
dev/ese/src/noncore/interop/: FxCopExclusions.cpp  assert.h  coltyps.h  esebackinterop.cpp  exception.h  exceptions.h  grbits.h  jetinterop.cpp  move.h  objtyps.h  params.h  privconsts.h  resource.h  structs.h  warnings.h
dev/ese/src/os/: CMakeLists.txt  _dev.hxx  _os.hxx  _osdisk.hxx  _oserror.hxx  _oseventtraceimpl.g.hxx  _osfile.hxx  _osfs.hxx  _ostls.hxx  _reftrace.hxx  _testinjection.hxx  _tls.hxx  config.cxx  cprintf.cxx  dev.cxx  dllentry.cxx  edbg.cxx  encrypt.cxx  error.cxx  event.cxx  gentracetagimpl.pl  hapublish.cxx  iostats.cxx  library.cxx  math.cxx  memfile.cxx  memory.cxx  memorynotification.cxx  norm.cxx  os.cxx  osblockcache.cxx  osdiag.cxx  osdisk.cxx  oseventtrace.cxx  osfile.cxx  osfs.cxx  osstd_.hxx  ostimerqueue.cxx  perfmon.cxx  reftrace.cxx  (+6 more)
dev/ese/src/os/blockcache/: _blockcache.hxx  _cachebase.hxx  _cachedfilehash.hxx  _cachedfileheader.hxx  _cachedfiletableentrybase.hxx  _cachefactory.hxx  _cacheheader.hxx  _cacherepository.hxx  _cachetelemetry.hxx  _cachethreadlocalstorage.hxx  _cachethreadlocalstoragebase.hxx  _cachethreadlocalstoragehash.hxx  _cachewrapper.hxx  _common.hxx  _factory.hxx  _factorywrapper.hxx  _filefilter.hxx  _filefilterwrapper.hxx  _fileidentification.hxx  _hash.hxx  (+29 more)
dev/ese/src/sync/: CMakeLists.txt  currproc.cxx  sync.cxx
test/ese/: CMakeLists.txt
test/ese/src/: CMakeLists.txt
test/ese/src/blue/: CMakeLists.txt
test/ese/src/bstf/: CMakeLists.txt
test/ese/src/devlibtest/: CMakeLists.txt
test/ese/src/inc/: EtwCollection.hxx  FailureInjector.h  _pfnjet.hxx  bstf.hxx  ese_common.hxx  eseloadlibrary.hxx  esetest.h  esewrapper.hpp  jetglue.hxx  mt_freeze.h  mt_object.h  mt_thread.h  pfnjetdown.hxx  testerr.h
test/ese/src/samples/: CMakeLists.txt
(+378 files in other folders)
